LoginDisplayHostMojo: Wire up (more) SmartLock.

This fixes a regression in the sense that Views login recently became
the default for some set of users, and SmartLock probably never worked
for login on Views (but it did work on WebUI login).

R=jdufault@chromium.org

Bug: 844532
Test: none yet, need to write E2E
Change-Id: I736f2ea3e8b7fc4d961852c5fb649f03a904d333
Reviewed-on: https://chromium-review.googlesource.com/1066935
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: James Hawkins <jhawkins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560319}
Former-commit-id: f9ea11d6beb1685ab6cc65d21e2cc6725e606403