chrome/browser/chromeos/login/ui/login_display_host_mojo.cc
@@ -59,6 +59,7 @@ void LoginDisplayHostMojo::SetUsers(const user_manager::UserList& users) {
 
 LoginDisplay* LoginDisplayHostMojo::CreateLoginDisplay(
     LoginDisplay::Delegate* delegate) {
+  user_selection_screen_->SetLoginDisplayDelegate(delegate);
   return new LoginDisplayMojo(delegate, this);
 }
 
@@ -137,6 +138,8 @@ void LoginDisplayHostMojo::OnStartSignInScreen(
 
   // Load the UI.
   existing_user_controller_->Init(user_manager::UserManager::Get()->GetUsers());
+
+  user_selection_screen_->InitEasyUnlock();
 }
 
 void LoginDisplayHostMojo::OnPreferencesChanged() {
@@ -246,6 +249,7 @@ void LoginDisplayHostMojo::HandleRecordClickOnLockIcon(
 void LoginDisplayHostMojo::HandleOnFocusPod(const AccountId& account_id) {
   // TODO(jdufault): Share common code between this and
   // ViewsScreenLocker::HandleOnFocusPod See https://crbug.com/831787.
+  proximity_auth::ScreenlockBridge::Get()->SetFocusedUser(account_id);
   user_selection_screen_->CheckUserStatus(account_id);
   WallpaperControllerClient::Get()->ShowUserWallpaper(account_id);
   focused_pod_account_id_ = account_id;
